Fix setup to fit assignment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5.2)
-project(Client_Server_Socket)
+project(file_client)
 
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES main.cpp Client/TCPClient.cpp Client/TCPClient.h)
-add_executable(Client_Server_Socket ${SOURCE_FILES})
+add_executable(file_client ${SOURCE_FILES})
